assets/scss/_accessibility.scss
// Hiding class, making content visible only to screen readers but not visually
// "sr" meaning "screen-reader"
// source: https://css-tricks.com/inclusively-hidden/, class from Scott O'Hara
.sr-only:not(:focus):not(:active) {
  clip: rect(0 0 0 0);
  clip-path: inset(50%);
  height: 1px;
  overflow: hidden;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

.skip-link {
  border: 0;
  clip: rect(1px, 1px, 1px, 1px);
  clip-path: inset(50%);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  position: absolute;
  width: 1px;
  word-wrap: normal;
  transition: none;
  background-color: var(--color-gray-300);
  border-radius: var(--ospo-border-radius-small);
  color: var(--ospo-text-color);
  font-size: var(--ospo-font-body-size-medium);
  font-weight: var(--ospo-font-weight-bold);
  padding: var(--ospo-spacing-lg) var(--ospo-spacing-xl) var(--ospo-spacing-lg);
  text-decoration: none;
  &:focus {
    clip: auto !important;
    clip-path: none;
    display: block;
    height: auto;
    line-height: normal;
    left: 5px;
    top: 5px;
    width: auto;
    z-index: var(--z-index-accessibility);
    filter: drop-shadow(0 0 2px 2px rgba(0, 0, 0, 0.6));
  }
}

